<resources>
    <string name="app_name">Personal Financial</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_underline"><u>Sign up</u></string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_underline"><u>Sign in</u></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="icon">Icon</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_visibility">password visibility</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>