<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/gray"
    android:padding="20dp">

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:autofillHints="password"
        android:backgroundTint="@color/gray"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintEnd_toStartOf="@id/passwordVisibilityImageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/passwordIconImageView"
        app:layout_constraintTop_toTopOf="@+id/confirmPasswordIconImageView" />

    <ImageView
        android:id="@+id/confirmPasswordIconImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/lock_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:tint="@color/gray" />

    <ImageView
        android:id="@+id/confirmPasswordVisibilityImageView"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/visibility_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/passwordEditText"
        app:layout_constraintTop_toTopOf="@id/passwordEditText"
        app:tint="@color/gray"
        android:contentDescription="@string/password_visibility" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/userIconImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/user_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:tint="@color/gray" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="8dp"
        app:backgroundTint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/userIconImageView"
        app:layout_constraintTop_toTopOf="@id/userIconImageView"
        android:autofillHints="username" />

    <ImageView
        android:id="@+id/emailIconImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/email_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText"
        app:tint="@color/gray" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        app:backgroundTint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/emailIconImageView"
        app:layout_constraintTop_toTopOf="@id/emailIconImageView"
        android:autofillHints="emailAddress" />

    <ImageView
        android:id="@+id/passwordIconImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/lock_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:tint="@color/gray" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/gray"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintEnd_toStartOf="@id/passwordVisibilityImageView"
        app:layout_constraintStart_toEndOf="@id/passwordIconImageView"
        app:layout_constraintTop_toTopOf="@id/passwordIconImageView"
        android:autofillHints="password" />

    <ImageView
        android:id="@+id/passwordVisibilityImageView"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/visibility_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/passwordEditText"
        app:layout_constraintTop_toTopOf="@id/passwordEditText"
        app:tint="@color/gray"
        android:contentDescription="@string/password_visibility" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/light_pink"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/loginTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditText" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="56dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/boldLoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/sign_in_underline"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/loginTextView"
        app:layout_constraintStart_toEndOf="@id/loginTextView"
        app:layout_constraintTop_toTopOf="@id/loginTextView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:srcCompat="@drawable/icon" />

</androidx.constraintlayout.widget.ConstraintLayout>
